go-away/tests/snapshots/typescript_output__externally_tagged_tuple_enum.snap
---
source: go-away/tests/typescript_output.rs
expression: "go_away::registry_to_typescript_output(registry)"

---
export type Two = {
    y: boolean;
}
export type One = {
    x: number;
}
export type ExternallyTaggedTupleEnum = { "One": One } | { "Two": Two };

