go-away/tests/snapshots/typescript_output__internally_tagged_tuple_enum.snap
---
source: go-away/tests/typescript_output.rs
expression: "go_away::registry_to_typescript_output(registry)"

---
type Two = {
	y: boolean;
}
type One = {
	x: number;
}
type InternallyTaggedTupleEnum = ({ "type": "One" } & One) | ({ "type": "Two" } & Two);

