go-away/tests/snapshots/typescript_output__lifetimes_and_strs.snap
---
source: go-away/tests/typescript_output.rs
expression: "go_away::registry_to_typescript_output(registry)"

---
export type TypeWithLifetimes = {
	data: string;
	other: string;
}

