go-away/tests/snapshots/typescript_output__struct_output.snap
---
source: go-away/tests/typescript_output.rs
expression: "go_away::registry_to_typescript_output(registry)"

---
export type MyData = {
	field_one: string;
	nested: Nested;
}
export type Nested = {
	some_other_name: string;
	an_int: number;
	fulfilment_type: FulfilmentType;
}
export enum FulfilmentType {
	Delivery = "Delivery",
	Collection = "Collection",
}

