go-away/tests/snapshots/typescript_output__type_aliases.snap
---
source: go-away/tests/typescript_output.rs
expression: "go_away::registry_to_typescript_output(registry)"

---
export type MyType = Record<string, number>;

