go-away/tests/snapshots/typescript_output__untagged_tuple_enum.snap
---
source: go-away/tests/typescript_output.rs
expression: "go_away::registry_to_typescript_output(registry)"

---
type Two = {
	y: bool;
}
type One = {
	x: number;
}
type UntaggedTupleEnum = One | Two;

